kubernetes/apps/astro-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astro-docs
  namespace: docs
spec:
  selector:
    app: astro-docs
  ports:
    - port: 80
      targetPort: 4321
