kubernetes/apps/astro-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-docs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: docs.devops-lab.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astro-docs
                port:
                  number: 80
